--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.algalopez.mycon.Wifi.Presentation.WifiFragment"
+    tools:context="com.algalopez.mycon.wifi.presentation.WifiFragment"
     tools:showIn="@layout/activity_wifi"
     android:orientation="vertical">
 
