--- a/app/src/main/res/layout/wifi_connected_device_item.xml
+++ b/app/src/main/res/layout/wifi_connected_device_item.xml
@@ -1,15 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp">
 
+
+    <!-- TOP LEFT -->
     <TextView
         android:id="@+id/wifi_connected_device_item_ip"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/wifi_connectedDevice_ip" />
+        android:text="@string/wifi_connectedDevice_ip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/wifi_connected_device_item_name"
+        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_mac"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="0dp"
+        android:gravity="start"/>
 
-</LinearLayout>
+
+    <!-- TOP RIGHT -->
+    <TextView
+        android:id="@+id/wifi_connected_device_item_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/wifi_connectedDevice_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/wifi_connected_device_item_ip"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_brand"
+        android:gravity="end"/>
+
+
+    <!-- BOTTOM LEFT -->
+    <TextView
+        android:id="@+id/wifi_connected_device_item_mac"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/wifi_connectedDevice_mac"
+        app:layout_constraintEnd_toStartOf="@+id/wifi_connected_device_item_brand"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_ip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="start"/>
+
+
+    <!-- BOTTOM RIGHT -->
+    <TextView
+        android:id="@+id/wifi_connected_device_item_brand"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/wifi_connectedDevice_brand"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/wifi_connected_device_item_mac"
+        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="end"/>
+
+
+</android.support.constraint.ConstraintLayout>
