--- a/app/src/main/res/layout/wifi_connected_device_item.xml
+++ b/app/src/main/res/layout/wifi_connected_device_item.xml
@@ -15,13 +15,14 @@
         android:id="@+id/wifi_connected_device_item_ip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/wifi_connectedDevice_ip"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/wifi_connected_device_item_name"
-        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_mac"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="0dp"
-        android:gravity="start"/>
+        android:gravity="start"
+        android:text="@string/wifi_connectedDevice_ip"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_mac"
+        app:layout_constraintEnd_toStartOf="@+id/wifi_connected_device_item_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- TOP RIGHT -->
@@ -29,12 +30,13 @@
         android:id="@+id/wifi_connected_device_item_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:text="@string/wifi_connectedDevice_name"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_brand"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/wifi_connected_device_item_ip"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/wifi_connected_device_item_brand"
-        android:gravity="end"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- BOTTOM LEFT -->
@@ -42,12 +44,13 @@
         android:id="@+id/wifi_connected_device_item_mac"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="start"
         android:text="@string/wifi_connectedDevice_mac"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/wifi_connected_device_item_brand"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_ip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="start"/>
+        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_ip" />
 
 
     <!-- BOTTOM RIGHT -->
@@ -55,12 +58,13 @@
         android:id="@+id/wifi_connected_device_item_brand"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:text="@string/wifi_connectedDevice_brand"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/wifi_connected_device_item_mac"
-        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="end"/>
+        app:layout_constraintTop_toBottomOf="@+id/wifi_connected_device_item_name" />
 
 
 </android.support.constraint.ConstraintLayout>
