--- a/app/src/main/res/menu/menu_wifi.xml
+++ b/app/src/main/res/menu/menu_wifi.xml
@@ -2,9 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.algalopez.mycon.wifi.presentation.WifiActivity">
+
+
+    <item
+        android:id="@+id/action_update"
+        android:icon="@mipmap/ic_refresh_white_36dp"
+        android:orderInCategory="100"
+        android:title="@string/action_update"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 </menu>
