--- a/app/src/main/res/menu/menu_wifi.xml
+++ b/app/src/main/res/menu/menu_wifi.xml
@@ -10,9 +10,21 @@
         android:orderInCategory="100"
         android:title="@string/action_update"
         app:showAsAction="ifRoom" />
+
+
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="205"
+        android:title="@string/action_about"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="101"
+        android:orderInCategory="205"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+
+
+
 </menu>
