--- a/app/src/main/res/layout/content_detail_wifi.xml
+++ b/app/src/main/res/layout/content_detail_wifi.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="com.algalopez.mycon.wifi.presentation.wifi.WifiFragment"
+    android:id="@+id/fragment_detail_wifi"
+    android:name="com.algalopez.mycon.wifi.presentation.detailwifi.DetailWifiFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_wifi" />
+    tools:layout="@layout/fragment_detail_wifi" />
